// ============================================================================
// /sales/revenue-recognition-service (版本 2.0)
// 描述: 管理收入确认流程，处理履约义务 (POB) 和收入确认过账。
//       字段设计参考核心ERP的收入会计和报告 (RAR) 模块表结构 (例如, FARR_D_POSTING)。
// ============================================================================

syntax = "proto3";

package sd.rr.v1;

option go_package = "github.com/enterprise/erp/protos/sd/rr;rr";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// ============================================================================
// 服务定义: RevenueRecognitionService
// ============================================================================

service RevenueRecognitionService {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "管理收入确认流程，处理履约义务 (POB) 和收入确认过账。"
  };
  // 创建收入合同 (New)
  rpc CreateRevenueContract(CreateRevenueContractRequest) returns (RevenueContractResponse) {

    option (google.api.http) = {

      post: "/api/v1/sales/revenue-contract"

      body: "*"

    };

  }

  // 获取收入合同的履约义务 (POB)
  rpc GetPerformanceObligations(GetPerformanceObligationsRequest) returns (GetPerformanceObligationsResponse) {


    option (google.api.http) = {


      get: "/api/v1/sales/performance-obligations"


    };


  }

  // 执行收入确认运行
  rpc RunRevenuePosting(RunRevenuePostingRequest) returns (RunRevenuePostingResponse) {


    option (google.api.http) = {


      post: "/api/v1/sales/run-revenue-posting"


      body: "*"


    };


  }
  
  // 冲销收入过账 (New)
  rpc ReverseRevenuePosting(ReverseRevenuePostingRequest) returns (RevenuePostingResponse) {

  
    option (google.api.http) = {

  
      post: "/api/v1/sales/revenue-posting/reverse"

  
      body: "*"

  
    };

  
  }

  // 查询收入过账凭证
  rpc GetRevenuePostings(GetRevenuePostingsRequest) returns (GetRevenuePostingsResponse) {


    option (google.api.http) = {


      get: "/api/v1/sales/revenue-postings"


    };


  }
}

// ============================================================================
// 数据结构: RevenueRecognition (收入确认)
// ============================================================================

// 履约义务 (POB)
message PerformanceObligation {
  string pob_id = 1;
  string revenue_contract_number = 2;
  string source_document = 3;
  string description = 4;
  common.v1.MonetaryValue allocated_price = 5;
  string recognition_method = 6;
  common.v1.MonetaryValue recognized_revenue = 7;
  common.v1.MonetaryValue deferred_revenue = 8;
  common.v1.ItemCategory item_category = 9;
}

// 收入过账凭证
message RevenuePostingDocument {
  string document_id = 1;
  google.protobuf.Timestamp posting_date = 2;
  string pob_id = 3;
  common.v1.MonetaryValue amount = 4;
  common.v1.PostingType posting_type = 5;
  string accounting_document_number = 6;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

message CreateRevenueContractRequest {
  string source_document_number = 1; // e.g. Sales Order
  common.v1.DocumentType source_document_type = 2;
  string company_code = 3;
  string customer = 4;
  common.v1.RequestContext context = 99;
}

message RevenueContractResponse {
  bool success = 1;
  string revenue_contract_number = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 获取履约义务请求
message GetPerformanceObligationsRequest {
  string revenue_contract_number = 1;
  common.v1.RequestContext context = 99;
}

// 获取履约义务响应
message GetPerformanceObligationsResponse {
  repeated PerformanceObligation obligations = 1;
}

// 执行收入确认运行请求
message RunRevenuePostingRequest {
  string company_code = 1;
  string posting_period = 2; // YYYY-MM
  common.v1.RequestContext context = 99;
}

// 执行收入确认运行响应
message RunRevenuePostingResponse {
  string run_id = 1;
  bool success = 2;
  int32 documents_created = 3;
  repeated common.v1.ApiMessage messages = 4;
}

message ReverseRevenuePostingRequest {
  string document_id = 1;
  string reversal_reason = 2;
  common.v1.RequestContext context = 99;
}

message RevenuePostingResponse {
  bool success = 1;
  string reversal_document_id = 2;
  repeated common.v1.ApiMessage messages = 3;
}

// 查询收入过账凭证请求
message GetRevenuePostingsRequest {
  string pob_id = 1;
  common.v1.DateRange posting_date_range = 2;
  common.v1.PaginationRequest pagination = 98;
  common.v1.RequestContext context = 99;
}

// 查询收入过账凭证响应
message GetRevenuePostingsResponse {
  repeated RevenuePostingDocument documents = 1;
  common.v1.PaginationResponse pagination = 2;
}
